--- a/tema5.html
+++ b/tema5.html
@@ -41,51 +41,66 @@
       <section class="tema_2section_3col">
         <div>
           <h2>OPGAVEBESKRIVELSE</h2>
-          <p>I tema “03 Grundlæggende UX” designede jeg en prototype af en hjemmeside, hvor man kunne købe unikke og limited editions t-shirts med print, og som var designet af forskellige startup kunstnere. Ved køb af et produkt støtter man derigennem den enkelte designer, hvoraf navnet “STØT EN STARTUP” udsprang.</p>
-          <p>Du kan se mit færdige produkt til højre, hvorefter du kan læse mere om min proces nedenfor.</p>
+          <p>I dette tema fik vi tildelt en todelt opgave. I første projekt var fokus at interviewe en person med en passion, som efterfølgende skulle munde ud i en videoproduktion samt dertilhørende pilotsite.</p>
+          <p>Pilotsitet og dertilhørende indhold forberedte os på det efterfølgende projekt, hvor vi skulle redesigne en hjemmeside for en virksomhed. Her skulle der ligeledes indgå videomateriale.</p>
+          <p>Du kan se mit begge mine færdige produkter til højre, hvorefter du kan læse mere om processerne nedenfor.</p>
         </div>
         <div class="calltoaction_center">
-          <a class="calltoaction" href="https://xd.adobe.com/view/a139f599-8875-4036-9330-ddfb088d91a9-f46a/?fullscreen">SE PRODUKT</a>
+          <a class="calltoaction" href="https://dnygaard.dk/kea/05_indhold/pilot_klara2/index.html">SE PILOTPROJEKT</a>
+          <div class="calltoaction_knap2_tema05">
+            <a class="calltoaction" href="#">SE REDESIGN</a>
+          </div>
         </div>
         <div class="img_opgavebeskrivelse">
           <figure>
-            <img src="tema_3/03_opgavebeskrivelse.webp" alt="Billede af det færdige produkt" />
+            <img src="tema_5/05_pilot.webp" alt="Billede af det færdige produkt" />
+            <img src="tema_5/05_opgavebeskrivelse.webp" alt="Billede af det færdige produkt" />
           </figure>
         </div>
       </section>
 
       <section class="proces_2col">
         <div>
-          <h2>IDÉ OG RESEARCH</h2>
-          <p>Idéen til “STØT EN STARTUP” udsprang af egne erfaringer som nyopstartet virksomhed. Jeg ønskede at skabe et koncept, hvor nyopstartede kreative sjæle ville få mulighed for indgå et samarbejde med “STØT EN STARTUP” og derigennem opnå større eksponering.</p>
-          <p>I min desk research, hvor jeg indsamlede viden og indsigter fra allerede eksisterende hjemmesider, fandt jeg ud af, at dette koncept ikke fandtes inden for tekstiler herunder t-shirts. Konceptet fandtes dog inden for salg af interiør og andre håndlavede kreationer fra forskellige kunstnere. Jeg undersøgte derfor også andre hjemmesider, som solgte t-shirts. Dette med henblik på at undersøge virksomhedernes design, priser, USP, call to action samt UI elementer. Tillige viste min desk research, at der er et øget fokus på bæredygtighed.</p>
-          <p>Med afsæt i ovenstående indsigter benyttede jeg mig yderligere af en kvalitativ metode, herunder interview, samt en kvantitativ metode, herunder surveyundersøgelse. Dette med henblik på at indsamle empiri samt data og derigennem afsøge forbrugerens indkøbsvaner af t-shirts nærmere.</p>
+          <h2>PILOTPROJEKT</h2>
+          <p>
+            <b>PRÆPRODUKTION</b> <br />
+            I pilotprojektet valgte jeg at interviewe min veninde, Klara Bloch, som til daglig driver sin egen smykkebutik, hvor hun designer og kreerer smykker. Forinden interviewet havde jeg lavet en interviewguide, som skulle forberede Klara på de spørgsmål, jeg ville stille hende samt sikre, at jeg fik besvaret de vigtigste spørgsmål omkring Klaras passion.
+          </p>
+          <p>
+            <b>PRODUKTION</b> <br />
+            Under selve produktionen benyttede min makker og jeg os af lånt et DLSR-kamera samt knappenålsmikrofon fra tech lounge. Dette med henblik på at skabe god video- og lydkvalitet gennem optagelserne. Under produktionsfasen forsøgte vi at filme en masse B-rolls, hvor Klara foretog sig noget i relation til den historie, vi ønskede at fortælle. Her erfarede vi ydermere, at man aldrig kan få nok B-rolls, og at de gerne må være af længere varighed. En god erfaring af have med sig, til næste projekt, da denne video udelukkende blev kreeret af B-rolls. Under produktionen benyttede vi os ligeledes af establishing shots for at sætte rammen for fortællingen.
+          </p>
+          <p><b>POSTPRODUKTION</b> <br />Under postproduktionen sorterede og kategoriserede vi de forskellige videoklip og synkroniserede efterfølgende lyden fra den eksterne mikrofon med selve interviewet. Herefter begyndte vi at klippe, hvor vi først grov-klippede og dernæst finklippede. Under finklipningen gjorde vi særlig brug af Morph Cuts for at skabe blødere overgange/transitions mellem de forskellige klip.</p>
+          <p>Til sidst udarbejdede vi et pilotsite, hvor vi indsatte videoen samt detilhørende fotos, portrætformat, bredformat og højformat, som vi tog ude på selve produktionsdagen. Endvidere lavede vi Klaras logo i Adobe Illustrator, som vi ligeledes satte ind i videoens intro.</p>
         </div>
-        <div class="proces_byt_plads">
-          <img src="tema_2/02_moodboard.webp" alt="Moodboard" />
-          <img src="tema_2/02_styletile.webp" alt="styletile" />
+        <div>
+          <video controls src="https://dnygaard.dk/kea/05_indhold/video/video.mp4"></video>
+          <img class="img3" src="tema_5/05_pilotbred.webp" alt="Billede af Klara fra pilotprojekt" />
         </div>
       </section>
 
       <section class="proces_2col">
         <div>
-          <h2>DESIGN</h2>
-          <p>Med indsigterne fra min desk research samt indsamling af empiri og data, startede jeg designprocessen med en sketch fase, hvor jeg udarbejdede en lightning demos, som senere blev brugt som idégenerering og inspiration i klassen. Jeg fik yderligere inspiration til designet fra Kaj Koncept, Bareen Tshirt, Han Kjøbenhavn og NAKD.</p>
-          <p>I designprocessen udarbejdede jeg yderligere et moodboard, som dannede udgangspunkt for det visuelle udtryk. Endvidere arbejdede jeg med Crazy 8’s, som er fordelagtig at anvende til hurtig idégenering.</p>
-          <p>Med afsæt i ovenstående udarbejdede jeg en solution sketch, som gav mig et visuelt overblik, inden jeg skulle i gang med at lave min High fidelity prototype i Adobe XD. Jeg finder det yderligere nævneværdigt, at vi i dette tema blev introduceret for UI, konventioner, gestaltlove, informationsarkitektur og copy samt micro copy, som jeg ligeledes forsøgte at implementere i min High fidelity prototype.</p>
-        </div>
-        <div>
-          <img src="tema_2/html_css.webp" alt="HTML og CSS" />
-        </div>
-      </section>
-
-      <section class="proces_2col">
-        <div>
-          <h2>TEST OG PITCH</h2>
-          <p>Afslutningsvis testede jeg min prototype med tænke-højt-testen. Dette gav mig nogle indsigter i forhold til prototypens brugergrænseflade samt brugerrejsen, som jeg kunne arbejde videre på, inden aflevering og pitch for resten af klassen.</p>
+          <h2>REDESIGN</h2>
+          <p>Efter pilotprojektet var vi nu klædt bedre på til at redesigne en selvvalgt virksomheds hjemmeside. I dette projekt valgte vi at redesigne Kræss’ hjemmeside, som er en virksomhed, der sælger interiør fra forskellige danske lokale kunstnere samt designere.</p>
+          <p>
+            <b>RESEARCH</b> <br />
+            Da vi havde stablet en aftale på benene og indgået et samarbejde med Kræss, begyndte vi straks at analysere Kræss’ hjemmeside samt koncept på baggrund af det udleverede procesdokument. For at undersøge virksomhedens nuværende website udarbejdede vi et sitemap, en funktionalitetsliste, wireframes, styletile, indholdsoversigt og analyserede hjemmesidens foto- samt videostil.
+          </p>
+          <p>Derudover undersøgte vi brugeropfattelsen af Kræss’ oprindelige hjemmeside. For at undersøge dette gjorde vi brug af henholdsvis BERT-test, spørgeskemaundersøgelse samt 5 sec test. BERT-testen udførte vi ligeledes på ejerne af butikken. Dette med henblik på at kunne sammenholde de to BERT-tests og derigennem finde ud af, om der var særlige punkter, som vi skulle være opmærksomme på i vores redesign.</p>
+          <p>I undersøgelsesfasen undersøge vi ligeledes Kræss’ koncept, hvor vi gennem et interview med ejerne blev klogere på virksomhedens historie/budskab, målgruppe, produkter/services, SP samt USP.</p>
+          <p>
+            <b>INDSIGTER OG REDESIGN</b> <br />
+            På baggrund af vores grundige research samt analysearbejde fandt vi frem til de indsigter, som var omdrejningspunktet for vores redesign. Fokus for redesignet var at gøre hjemmesiden mere simpel og moderne og derigennem skabe fokus på de unikke og finurlige produkter, som Kræss sælger. Dernæst visualiserede vi vores ønsker via moodboards, wireframes og styletile, der efterfølgende dannede grundlag for vores kodning af hjemmesiden.
+          </p>
+          <p>I udviklingsfasen benyttede vi i gruppen os af daglige SCRUM-møder, hvor vi ofte startede ud med en nuværende status og aftalte efterfølgende, hvilke opgaver vi skulle have nået, inden dagen var omme samt eventuelle lektier.</p>
+          <p>Afslutningsvis lavede vi en Lighthouse test samt et pitch for resten af klassen.</p>
         </div>
         <div class="proces_byt_plads">
-          <img src="tema_2/02_splash.webp" alt="Splashbillede" />
+          <video controls class="video">
+            <source src="http://dnygaard.dk/kea/05_indhold/kr%C3%A6ss_langversion2.mp4" />
+          </video>
+          <img src="tema_5/05_redesign.webp" alt="HTML og CSS" />
         </div>
       </section>
     </main>
