--- a/tema2.html
+++ b/tema2.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <title>02_Grundlæggende Web</title>
   </head>
   <body>
@@ -83,8 +84,8 @@
         <div>
           <h2>SPLASHBILLEDE</h2>
           <p>Til vores hjemmeside skulle vi ligeledes designe vores eget splashbillede, hvor jeg i den forbindelse fik arbejdet med Adobe Photoshop.</p>
-          <p>Jeg valgte at tage et billede af min tuftinggun og fjerne baggrunden på den. Derudover fandt jeg en hånd på Unsplash.com hvor jeg ligeledes fjernede baggrunden, og satte de to billeder sammen på en ny baggrund.</p>
-          <p>Til sidst i temaet uploadede jeg min kode i VSCODE til mit webhost ved hjælp af ftp-clienten Filezilla.</p>
+          <p>I udarbejdelsen af mit spalshbillede styrkede jeg mine kompetencer inden for det at arbejde med flere lag, fjerne baggrunde og opnåede en generel forståelse for, hvordan programmet virker. Udover at styrke mine færdigheder i Photoshop, fik jeg, på dette tema, ligeledes viden om grundlæggende farveteori, typografi samt ikon-design, hvilket ligeledes blev implementeret på mit website.</p>
+          <p>Til sidst i temaet validerede jeg mine HTML- og CSS-filer og uploadede herefter til min webhost ved hjælp af ftp-clienten Filezilla.</p>
         </div>
         <div class="proces_byt_plads">
           <img src="tema_2/02_splash.webp" alt="Splashbillede" />
