--- a/tema6.html
+++ b/tema6.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <title>06_Portfolio</title>
   </head>
   <body>
@@ -40,36 +41,25 @@
 
       <section class="proces_2col">
         <div>
-          <h2>IDÉ OG RESEARCH</h2>
-          <p>Idéen til “STØT EN STARTUP” udsprang af egne erfaringer som nyopstartet virksomhed. Jeg ønskede at skabe et koncept, hvor nyopstartede kreative sjæle ville få mulighed for indgå et samarbejde med “STØT EN STARTUP” og derigennem opnå større eksponering.</p>
-          <p>I min desk research, hvor jeg indsamlede viden og indsigter fra allerede eksisterende hjemmesider, fandt jeg ud af, at dette koncept ikke fandtes inden for tekstiler herunder t-shirts. Konceptet fandtes dog inden for salg af interiør og andre håndlavede kreationer fra forskellige kunstnere. Jeg undersøgte derfor også andre hjemmesider, som solgte t-shirts. Dette med henblik på at undersøge virksomhedernes design, priser, USP, call to action samt UI elementer. Tillige viste min desk research, at der er et øget fokus på bæredygtighed.</p>
-          <p>Med afsæt i ovenstående indsigter benyttede jeg mig yderligere af en kvalitativ metode, herunder interview, samt en kvantitativ metode, herunder surveyundersøgelse. Dette med henblik på at indsamle empiri samt data og derigennem afsøge forbrugerens indkøbsvaner af t-shirts nærmere.</p>
+          <h2>RESEARCH OG STIL</h2>
+          <p>Ud fra gode erfaringer med Trello på forrige tema, valgte jeg at oprette en ny Trello til dette eksamensprojekt. Dette med henblik på at skabe overblik samt struktur i min arbejdsgang.</p>
+          <p>Dernæst gik jeg i gang med en deskresearch, som senere mundede ud i et moodboard og efterfølgende et styletile. Farverne, i mit portfolio, er udtrukket fra mit moodboard i Adobe Color, og farverne er nøje udvalgt, da jeg, gennem stilarten samt farvevalg, har forsøgt at afspejle mig selv.</p>
+          <p>Jeg besluttede mig ligeledes for at portfolioets stilart skulle tage afsæt i minimalismen - men med kant. Dette med henblik på at fremhæve mine projekter og processer, som er det centrale i denne kontekst. Minimalismen er derfor særlig fordelagtig at anvende, da det er en stilart der kendetegnes ved at minimere eller reducere et værks udtryk, hvorfor jeg har forsøgt at gøre værket enkelt men kontrastfyldt.</p>
         </div>
         <div class="proces_byt_plads">
-          <img src="tema_2/02_moodboard.webp" alt="Moodboard" />
-          <img src="tema_2/02_styletile.webp" alt="styletile" />
+          <img src="tema_6/06_moodboard.webp" alt="Moodboard" />
+          <img src="tema_6/06_styletile.webp" alt="styletile" />
         </div>
       </section>
 
       <section class="proces_2col">
         <div>
           <h2>DESIGN</h2>
-          <p>Med indsigterne fra min desk research samt indsamling af empiri og data, startede jeg designprocessen med en sketch fase, hvor jeg udarbejdede en lightning demos, som senere blev brugt som idégenerering og inspiration i klassen. Jeg fik yderligere inspiration til designet fra Kaj Koncept, Bareen Tshirt, Han Kjøbenhavn og NAKD.</p>
-          <p>I designprocessen udarbejdede jeg yderligere et moodboard, som dannede udgangspunkt for det visuelle udtryk. Endvidere arbejdede jeg med Crazy 8’s, som er fordelagtig at anvende til hurtig idégenering.</p>
-          <p>Med afsæt i ovenstående udarbejdede jeg en solution sketch, som gav mig et visuelt overblik, inden jeg skulle i gang med at lave min High fidelity prototype i Adobe XD. Jeg finder det yderligere nævneværdigt, at vi i dette tema blev introduceret for UI, konventioner, gestaltlove, informationsarkitektur og copy samt micro copy, som jeg ligeledes forsøgte at implementere i min High fidelity prototype.</p>
+          <p>Efter at have fastlagt stiludtrykket påbegyndte jeg designfasen. I denne fase benyttede jeg mig af sketching, crazy 8’s, wireframes samt en mock-up.</p>
+          <p>Ud fra min mock-up forsøgte jeg at lave et layoutdiagram, som senere, i samspil med mock-uppen, dannede et godt grundlag for at kode mit portfolio uden for mange bump på vejen.</p>
         </div>
         <div>
-          <img src="tema_2/html_css.webp" alt="HTML og CSS" />
-        </div>
-      </section>
-
-      <section class="proces_2col">
-        <div>
-          <h2>TEST OG PITCH</h2>
-          <p>Afslutningsvis testede jeg min prototype med tænke-højt-testen. Dette gav mig nogle indsigter i forhold til prototypens brugergrænseflade samt brugerrejsen, som jeg kunne arbejde videre på, inden aflevering og pitch for resten af klassen.</p>
-        </div>
-        <div class="proces_byt_plads">
-          <img src="tema_2/02_splash.webp" alt="Splashbillede" />
+          <img src="tema_6/06_mockup.webp" alt="HTML og CSS" />
         </div>
       </section>
     </main>
