stadiet inden smårettelser

--- a/ommig.html
+++ b/ommig.html
@@ -78,11 +78,7 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="footer">
-        <p>© Sarah Hvid Pedersen</p>
-      </div>
-    </footer>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
