--- a/projekter.html
+++ b/projekter.html
@@ -84,6 +84,7 @@
         </div>
       </section>
     </main>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
