--- a/tema3.html
+++ b/tema3.html
@@ -62,8 +62,8 @@
           <p>Med afsæt i ovenstående indsigter benyttede jeg mig yderligere af en kvalitativ metode, herunder interview, samt en kvantitativ metode, herunder surveyundersøgelse. Dette med henblik på at indsamle empiri samt data og derigennem afsøge forbrugerens indkøbsvaner af t-shirts nærmere.</p>
         </div>
         <div class="proces_byt_plads">
-          <img src="tema_2/02_moodboard.webp" alt="Moodboard" />
-          <img src="tema_2/02_styletile.webp" alt="styletile" />
+          <img src="tema_3/03_koncept2.webp" alt="Billede af mit koncept" />
+          <img src="tema_3/03_koncept.webp" alt="Koncept" />
         </div>
       </section>
 
@@ -75,7 +75,8 @@
           <p>Med afsæt i ovenstående udarbejdede jeg en solution sketch, som gav mig et visuelt overblik, inden jeg skulle i gang med at lave min High fidelity prototype i Adobe XD. Jeg finder det yderligere nævneværdigt, at vi i dette tema blev introduceret for UI, konventioner, gestaltlove, informationsarkitektur og copy samt micro copy, som jeg ligeledes forsøgte at implementere i min High fidelity prototype.</p>
         </div>
         <div>
-          <img src="tema_2/html_css.webp" alt="HTML og CSS" />
+          <img src="tema_3/03_moodboard.webp" alt="Moodboard" />
+          <img src="tema_3/03_highfidality.png" alt="High fidelity prototype" />
         </div>
       </section>
 
@@ -83,16 +84,16 @@
         <div>
           <h2>TEST OG PITCH</h2>
           <p>Afslutningsvis testede jeg min prototype med tænke-højt-testen. Dette gav mig nogle indsigter i forhold til prototypens brugergrænseflade samt brugerrejsen, som jeg kunne arbejde videre på, inden aflevering og pitch for resten af klassen.</p>
+          <p>I pitchen kan du se flere af mine indsagter samt sketches.</p>
+          <a class="calltoaction" href="https://docs.google.com/presentation/d/1Y56iOXzDgq8P3V-a7UT3Tkw93aKKnzZ5bkNuJczxeOE/edit?usp=sharing">SE PITCH</a>
         </div>
         <div class="proces_byt_plads">
-          <img src="tema_2/02_splash.webp" alt="Splashbillede" />
+          <img src="tema_3/03_koncept0.webp" alt="Screendump af pitch" />
         </div>
       </section>
     </main>
 
-    <footer>
-      <p>© Sarah Hvid Pedersen</p>
-    </footer>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
