--- a/tema5.html
+++ b/tema5.html
@@ -49,7 +49,7 @@
         <div class="calltoaction_center">
           <a class="calltoaction" href="https://dnygaard.dk/kea/05_indhold/pilot_klara2/index.html">SE PILOTPROJEKT</a>
           <div class="calltoaction_knap2_tema05">
-            <a class="calltoaction" href="#">SE REDESIGN</a>
+            <a class="calltoaction" href="http://sarahhvid.dk/kea/05_indhold/redesign_kraess/">SE REDESIGN</a>
           </div>
         </div>
         <div class="img_opgavebeskrivelse">
@@ -106,9 +106,7 @@
       </section>
     </main>
 
-    <footer>
-      <p>© Sarah Hvid Pedersen</p>
-    </footer>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
