--- a/tema6.html
+++ b/tema6.html
@@ -64,9 +64,7 @@
       </section>
     </main>
 
-    <footer>
-      <p>© Sarah Hvid Pedersen</p>
-    </footer>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
