--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
         </div>
       </section>
     </main>
-    <footer>
-      <p>© Sarah Hvid Pedersen</p>
-    </footer>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
