--- a/tema2.html
+++ b/tema2.html
@@ -107,9 +107,7 @@
       </section>
     </main>
 
-    <footer>
-      <p>© Sarah Hvid Pedersen</p>
-    </footer>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
