--- a/tema4.html
+++ b/tema4.html
@@ -95,9 +95,7 @@
       </section>
     </main>
 
-    <footer>
-      <p>© Sarah Hvid Pedersen</p>
-    </footer>
+    <footer>© Sarah Hvid Pedersen</footer>
 
     <script src="script.js"></script>
   </body>
