--- a/tema3.html
+++ b/tema3.html
@@ -91,6 +91,12 @@
           <img src="tema_3/03_koncept0.webp" alt="Screendump af pitch" />
         </div>
       </section>
+
+      <section class="bladre_sider">
+        <div>
+          <a class="next_page" href="tema4.html">GÅ TIL TEMA 04</a>
+        </div>
+      </section>
     </main>
 
     <footer>© Sarah Hvid Pedersen</footer>
