--- a/tema4.html
+++ b/tema4.html
@@ -30,7 +30,7 @@
       <section class="tema_1section_2col">
         <div class="tema_overskrift">
           <h1 class="tema_stort_tal">04</h1>
-          <h3>GRUNDLÆGGENDE ANIMATIOn</h3>
+          <h3>GRUNDLÆGGENDE ANIMATION</h3>
         </div>
         <div>
           <p class="temabeskrivelse">I tema ”04 – Grundlæggende animation” blev jeg introduceret for programmeringssproget javascript, som anvendes til at skabe avancerede og dynamiske websites. Udover det nye programmeringssprog, lærte jeg også, hvordan jeg i samspil med javascript og css animationer kunne skabe mit eget spil.</p>
@@ -91,6 +91,12 @@
         </div>
         <div class="proces_byt_plads">
           <img src="tema_4/04_java.webp" alt="Splashbillede" />
+        </div>
+      </section>
+
+      <section class="bladre_sider">
+        <div>
+          <a class="next_page" href="tema5.html">GÅ TIL TEMA 05</a>
         </div>
       </section>
     </main>
