--- a/tema5.html
+++ b/tema5.html
@@ -104,6 +104,12 @@
           <img src="tema_5/05_redesign.webp" alt="HTML og CSS" />
         </div>
       </section>
+
+      <section class="bladre_sider">
+        <div>
+          <a class="next_page" href="tema6.html">GÅ TIL TEMA 06</a>
+        </div>
+      </section>
     </main>
 
     <footer>© Sarah Hvid Pedersen</footer>
