--- a/tema6.html
+++ b/tema6.html
@@ -62,6 +62,12 @@
           <img src="tema_6/06_mockup.webp" alt="HTML og CSS" />
         </div>
       </section>
+
+      <section class="bladre_sider">
+        <div>
+          <a class="next_page" href="index.html">TILBAGE TIL FORSIDEN</a>
+        </div>
+      </section>
     </main>
 
     <footer>© Sarah Hvid Pedersen</footer>
