--- a/tema2.html
+++ b/tema2.html
@@ -93,17 +93,17 @@
       </section>
 
       <section>
-        <h2 class="sort_h2">OPGAVER PÅ SEMESTERET:</h2>
-        <a class="calltoaction" href="#">Moodboard</a>
-        <a class="calltoaction" href="#">Splashbillede</a>
-        <a class="calltoaction" href="#">Kodescreens</a>
+        <h2 class="sort_h2">ANDRE OPGAVER PÅ TEMAET:</h2>
+        <a class="calltoaction" href="https://docs.google.com/presentation/d/1SyGSmZ9xv9GXilP78aeNkdGttWPd49FNTNTp49aOydI/edit?usp=sharing ">02.01.01 Stil-pitch</a>
+        <a class="calltoaction" href="https://docs.google.com/document/d/1sryk26tlgolKBYiPfV_86qhYuijwwRQW6Wk5PGO_ppY/edit?usp=sharing">02.01.02 Indhold til dit website</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/1_semester/02_webdesign/kaeledyrsopgave/ ">02.02.a Kæledyr</a>
         <a class="calltoaction" href="#">Pitch</a>
       </section>
 
-      <section>
-        <h1>
-          <a href="tema3.html">GÅ TIL TEMA 03</a>
-        </h1>
+      <section class="bladre_sider">
+        <div>
+          <a class="next_page" href="tema3.html">GÅ TIL TEMA 03</a>
+        </div>
       </section>
     </main>
 
