mangler korrektur og andre opgaver

--- a/tema2.html
+++ b/tema2.html
@@ -93,11 +93,18 @@
       </section>
 
       <section>
-        <h2 class="sort_h2">ANDRE OPGAVER PÅ TEMAET:</h2>
-        <a class="calltoaction" href="https://docs.google.com/presentation/d/1SyGSmZ9xv9GXilP78aeNkdGttWPd49FNTNTp49aOydI/edit?usp=sharing ">02.01.01 Stil-pitch</a>
-        <a class="calltoaction" href="https://docs.google.com/document/d/1sryk26tlgolKBYiPfV_86qhYuijwwRQW6Wk5PGO_ppY/edit?usp=sharing">02.01.02 Indhold til dit website</a>
-        <a class="calltoaction" href="https://sarahhvid.dk/kea/1_semester/02_webdesign/kaeledyrsopgave/ ">02.02.a Kæledyr</a>
-        <a class="calltoaction" href="#">Pitch</a>
+        <h2 class="sort_h2">UDPLUK AF 02-OPGAVER:</h2>
+        <a class="calltoaction" href="https://docs.google.com/presentation/d/1SyGSmZ9xv9GXilP78aeNkdGttWPd49FNTNTp49aOydI/edit?usp=sharing ">Stil-pitch</a>
+        <a class="calltoaction" href="https://docs.google.com/document/d/1sryk26tlgolKBYiPfV_86qhYuijwwRQW6Wk5PGO_ppY/edit?usp=sharing">Indhold til website</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/1_semester/02_webdesign/kaeledyrsopgave/ ">Kæledyr</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/02_web/02_html/visitkort/ ">Visitkort</a>
+        <a class="calltoaction" href="http://sarahhvid.dk/kea/02_web/02_html/website_v1/ ">Website_v1</a>
+        <a class="calltoaction" href="http://sarahhvid.dk/kea/02_web/02_html/16_bokse/ ">16 bokse</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/02_web/02_html/grid_layout_2/ ">Grid øvelse 2</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/02_web/02_html/website_v2/ ">Website_v2</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/02_web/02_html/grid_layout_3/ ">Grid layout 3</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/02_web/03_ui/02_03_a_typografioevelse/ ">Typografiøvelse</a>
+        <a class="calltoaction" href="https://sarahhvid.dk/kea/02_web/04_responsive/25_bokse-opgave-stud/ ">20 bokse</a>
       </section>
 
       <section class="bladre_sider">
