Rettelse af tekster

--- a/tema4.html
+++ b/tema4.html
@@ -42,7 +42,7 @@
       <section class="tema_2section_3col">
         <div>
           <h2>OPGAVEBESKRIVELSE</h2>
-          <p>I tema “04 Animation” skulle jeg skabe mit eget spil ved at tegne grafikken i Adobe Illustrator og efterfølgende kode det i HTML, CSS og javascript.</p>
+          <p>I tema “04 Animation” skulle jeg skabe mit eget spil ved at tegne grafikken i Adobe Illustrator og efterfølgende kode spillet i HTML, CSS og javascript.</p>
           <p>I spillet skal du du mikse den helt rigtige cocktail og hjælpe Bartender Bravo med ikke at blive fyret, fordi han har lidt for travlt med at flirte med smukke kvinder og mindre travlt med at mikse lækre cocktails.</p>
           <p>Du kan se mit færdige produkt til højre, hvorefter du kan læse mere om min proces nedenfor.</p>
         </div>
@@ -60,8 +60,8 @@
         <div>
           <h2>IDÉ OG KONCEPT</h2>
           <p>Jævnfør opgavebeskrivelsen skulle jeg lave mit eget klik-spil, hvor jeg startede idegenereringen med en brainstorm.</p>
-          <p>Idéen til spillet, Bartender Bravo, udsprang af lysten til at skabe et spil for den ældre målgruppe, hvori der skulle indgå en form for læring. Dette med henblik på at spillet ikke blev et helt almindeligt klik-spil. Tanken var, at man skal blande en ny drink ved hvert level og derigennem opnå viden om, hvilke ingredienser, der skal i de udvalgte cocktails, som man skal hjælpe Bartender Bravo med at blande.</p>
-          <p>Du vinder spillet ved at opnå mindst 10 point. Rigtige ingredienser giver + 1 point, forkerte ingradienser giver - 1 point, og hvis du trykker på den væltede shaker mister du et liv.</p>
+          <p>Idéen til spillet, Bartender Bravo, udsprang af lysten til at skabe et spil for den ældre målgruppe, hvori der skulle indgå en form for læring. Dette med henblik på at spillet ikke blev et helt almindeligt klik-spil. Tanken var, at man skal blande en ny drink ved hvert level og derigennem opnå viden om ingredienserne heri.</p>
+          <p>Du vinder spillet ved at opnå mindst 10 point. Rigtige ingredienser giver + 1 point, forkerte ingredienser giver - 1 point, og hvis du trykker på den væltede shaker mister du et liv.</p>
         </div>
         <div class="proces_byt_plads">
           <img src="tema_4/04_aktivitetsdiagram.webp" alt="Aktivitetsdiagram" />
@@ -73,7 +73,7 @@
           <h2>DESIGN</h2>
           <p>Til at starte med havde jeg tiltænkt, at spillet skulle være realistisk i dets udtrykform samt tegnestil.</p>
           <p>Senere i processen, efter at have undersøgt og analyseret forskellige tegnestile, besluttede jeg mig dog for at gøre mine karaktere mere karikerede. Særligt tegnefilmsserien Johnny Bravo blev min primære inspirationskilde, hvorfor mine karakterer ligeledes ændrede udseende fra et mere realistisk udtryk til store musker, store læber og barm mm.</p>
-          <p>Endvidere ønskede jeg at skabe et mere fint og ekslusivt univers/look i selve baren, hvor spillet udfolder sig. Dette med henblik på at skabe en kontrast til mine karakterer. I baren har jeg yderligere haft fokus på at skabe et atmosfærisk perspektiv for at skabe en mere virkelighedstro scene, som fremstår mere realistisk og eksklusiv, end hvis designet havde været fladt og simpelt.</p>
+          <p>Endvidere ønskede jeg at skabe et mere fint og ekslusivt univers/look i selve baren, hvor spillet udfolder sig. Dette med henblik på at skabe en kontrast til mine karakterer. I baren har jeg yderligere haft fokus på at skabe atmosfærisk perspektiv, for at skabe en mere virkelighedstro scene, som fremstår mere realistisk og eksklusiv, end hvis designet havde været fladt og simpelt.</p>
           <p>Generelt er mit spil utrolig kontrastfyldt i både karakterdesign samt farvevalg, hvilket er med til at skabe tydelige focal points. Endvidere valgte jeg at lade asymmetri være en stor bestanddel af designet på karakterdesignet af Latino bravo. Dette med henblik på at fremhæve hovedpersonen i spillet, da resten af designet, i højere grad, er præget af symmetri.</p>
         </div>
         <div>
