--- a/tema5.html
+++ b/tema5.html
@@ -42,7 +42,8 @@
       <section class="tema_2section_3col">
         <div>
           <h2>OPGAVEBESKRIVELSE</h2>
-          <p>I dette tema fik vi tildelt en todelt opgave. I første projekt var fokus at interviewe en person med en passion, som efterfølgende skulle munde ud i en videoproduktion samt dertilhørende pilotsite.</p>
+          <p>I dette tema fik vi tildelt en todelt opgave - et pilotprojekt efterfulgt af en redeisgnsopgave af en valgfri hjemmeside.</p>
+          <p>Fokus for første projekt var at interviewe en person med en passion, som efterfølgende mundede ud i en videoproduktion samt dertilhørende pilotsite.</p>
           <p>Pilotsitet og dertilhørende indhold forberedte os på det efterfølgende projekt, hvor vi skulle redesigne en hjemmeside for en virksomhed. Her skulle der ligeledes indgå videomateriale.</p>
           <p>Du kan se mit begge mine færdige produkter til højre, hvorefter du kan læse mere om processerne nedenfor.</p>
         </div>
@@ -69,7 +70,7 @@
           </p>
           <p>
             <b>PRODUKTION</b> <br />
-            Under selve produktionen benyttede min makker og jeg os af lånt et DLSR-kamera samt knappenålsmikrofon fra tech lounge. Dette med henblik på at skabe god video- og lydkvalitet gennem optagelserne. Under produktionsfasen forsøgte vi at filme en masse B-rolls, hvor Klara foretog sig noget i relation til den historie, vi ønskede at fortælle. Her erfarede vi ydermere, at man aldrig kan få nok B-rolls, og at de gerne må være af længere varighed. En god erfaring af have med sig, til næste projekt, da denne video udelukkende blev kreeret af B-rolls. Under produktionen benyttede vi os ligeledes af establishing shots for at sætte rammen for fortællingen.
+            Under selve produktionen benyttede min makker og jeg os af lånt et DLSR-kamera samt knappenålsmikrofon fra tech lounge. Dette med henblik på at skabe god video- og lydkvalitet gennem optagelserne. Under produktionsfasen forsøgte vi at filme en masse B-rolls, hvor Klara foretog sig noget i relation til den historie, vi ønskede at fortælle. Her erfarede vi, at man aldrig kan få nok B-rolls, og at de gerne må være af længere varighed. En god erfaring af have med sig, til næste projekt, da videoen i det andet projekt udelukkende blev kreeret af B-rolls. Under produktionen benyttede vi os ligeledes af establishing shots for at sætte rammen for fortællingen.
           </p>
           <p><b>POSTPRODUKTION</b> <br />Under postproduktionen sorterede og kategoriserede vi de forskellige videoklip og synkroniserede efterfølgende lyden fra den eksterne mikrofon med selve interviewet. Herefter begyndte vi at klippe, hvor vi først grov-klippede og dernæst finklippede. Under finklipningen gjorde vi særlig brug af Morph Cuts for at skabe blødere overgange/transitions mellem de forskellige klip.</p>
           <p>Til sidst udarbejdede vi et pilotsite, hvor vi indsatte videoen samt detilhørende fotos, portrætformat, bredformat og højformat, som vi tog ude på selve produktionsdagen. Endvidere lavede vi Klaras logo i Adobe Illustrator, som vi ligeledes satte ind i videoens intro.</p>
@@ -83,7 +84,7 @@
       <section class="proces_2col">
         <div>
           <h2>REDESIGN</h2>
-          <p>Efter pilotprojektet var vi nu klædt bedre på til at redesigne en selvvalgt virksomheds hjemmeside. I dette projekt valgte vi at redesigne Kræss’ hjemmeside, som er en virksomhed, der sælger interiør fra forskellige danske lokale kunstnere samt designere.</p>
+          <p>Efter pilotprojektet var vi nu klædt på til at redesigne en selvvalgt virksomheds hjemmeside. I dette projekt valgte vi at redesigne Kræss’ hjemmeside, som er en virksomhed, der sælger interiør fra forskellige danske lokale kunstnere samt designere.</p>
           <p>
             <b>RESEARCH</b> <br />
             Da vi havde stablet en aftale på benene og indgået et samarbejde med Kræss, begyndte vi straks at analysere Kræss’ hjemmeside samt koncept på baggrund af det udleverede procesdokument. For at undersøge virksomhedens nuværende website udarbejdede vi et sitemap, en funktionalitetsliste, wireframes, styletile, indholdsoversigt og analyserede hjemmesidens foto- samt videostil.
@@ -92,9 +93,9 @@
           <p>I undersøgelsesfasen undersøge vi ligeledes Kræss’ koncept, hvor vi gennem et interview med ejerne blev klogere på virksomhedens historie/budskab, målgruppe, produkter/services, SP samt USP.</p>
           <p>
             <b>INDSIGTER OG REDESIGN</b> <br />
-            På baggrund af vores grundige research samt analysearbejde fandt vi frem til de indsigter, som var omdrejningspunktet for vores redesign. Fokus for redesignet var at gøre hjemmesiden mere simpel og moderne og derigennem skabe fokus på de unikke og finurlige produkter, som Kræss sælger. Dernæst visualiserede vi vores ønsker via moodboards, wireframes og styletile, der efterfølgende dannede grundlag for vores kodning af hjemmesiden.
+            På baggrund af vores research samt analysearbejde fandt vi frem til de vigtigste indsigter, som blev omdrejningspunktet for vores redesign. Fokus for redesignet var at gøre hjemmesiden mere simpel og moderne og derigennem skabe fokus på de unikke og finurlige produkter, som Kræss sælger. Dernæst visualiserede vi vores ønsker via moodboards, wireframes og styletile, der efterfølgende dannede grundlag for vores kodning af hjemmesiden.
           </p>
-          <p>I udviklingsfasen benyttede vi i gruppen os af daglige SCRUM-møder, hvor vi ofte startede ud med en nuværende status og aftalte efterfølgende, hvilke opgaver vi skulle have nået, inden dagen var omme samt eventuelle lektier.</p>
+          <p>I udviklingsfasen benyttede vi os, i gruppen, af daglige SCRUM-møder, hvor vi ofte startede ud med en nuværende status og aftalte efterfølgende, hvilke opgaver vi skulle have nået, inden dagen var omme samt eventuelle lektier.</p>
           <p>Afslutningsvis lavede vi en Lighthouse test samt et pitch for resten af klassen.</p>
         </div>
         <div class="proces_byt_plads">
