--- a/tema6.html
+++ b/tema6.html
@@ -43,8 +43,8 @@
         <div>
           <h2>RESEARCH OG STIL</h2>
           <p>Ud fra gode erfaringer med Trello på forrige tema, valgte jeg at oprette en ny Trello til dette eksamensprojekt. Dette med henblik på at skabe overblik samt struktur i min arbejdsgang.</p>
-          <p>Dernæst gik jeg i gang med en deskresearch, som senere mundede ud i et moodboard og efterfølgende et styletile. Farverne, i mit portfolio, er udtrukket fra mit moodboard i Adobe Color, og farverne er nøje udvalgt, da jeg, gennem stilarten samt farvevalg, har forsøgt at afspejle mig selv.</p>
-          <p>Jeg besluttede mig ligeledes for at portfolioets stilart skulle tage afsæt i minimalismen - men med kant. Dette med henblik på at fremhæve mine projekter og processer, som er det centrale i denne kontekst. Minimalismen er derfor særlig fordelagtig at anvende, da det er en stilart der kendetegnes ved at minimere eller reducere et værks udtryk, hvorfor jeg har forsøgt at gøre værket enkelt men kontrastfyldt.</p>
+          <p>Dernæst gik jeg i gang med en deskresearch, som senere mundede ud i et moodboard og efterfølgende et styletile. Farverne, i mit portfolio, er udtrukket fra mit moodboard i Adobe Color, og farverne er nøje udvalgt, da jeg gennem stilarten samt farvevalg har forsøgt at afspejle mig selv.</p>
+          <p>Jeg besluttede mig ligeledes for at portfolioets stilart skulle tage afsæt i minimalismen - men med kant. Dette med henblik på at fremhæve mine projekter og processer, som er det centrale i denne kontekst. Minimalismen er derfor særlig fordelagtig at anvende, da det er en stilart, som kendetegnes ved at minimere eller reducere et værks udtryk, hvorfor jeg har forsøgt at gøre værket enkelt men kontrastfyldt.</p>
         </div>
         <div class="proces_byt_plads">
           <img src="tema_6/06_moodboard.webp" alt="Moodboard" />
@@ -56,7 +56,7 @@
         <div>
           <h2>DESIGN</h2>
           <p>Efter at have fastlagt stiludtrykket påbegyndte jeg designfasen. I denne fase benyttede jeg mig af sketching, crazy 8’s, wireframes samt en mock-up.</p>
-          <p>Ud fra min mock-up forsøgte jeg at lave et layoutdiagram, som senere, i samspil med mock-uppen, dannede et godt grundlag for at kode mit portfolio uden for mange bump på vejen.</p>
+          <p>Ud fra min mock-up forsøgte jeg at lave et layoutdiagram, som senere, i samspil med mock-uppen, gjorde, at jeg formåede at kode mit portfolio uden store bump på vejen.</p>
         </div>
         <div>
           <img src="tema_6/06_mockup.webp" alt="HTML og CSS" />
