--- a/tema2.html
+++ b/tema2.html
@@ -33,7 +33,7 @@
           <h3>GRUNDLÆGGENDE WEB</h3>
         </div>
         <div>
-          <p class="temabeskrivelse">I tema “02 - Grundlæggende web” fik jeg en grundlæggende viden om anvendelse af diverse redskaber, som jeg, som kommende multimediedesigner, kan anvende, når jeg senere kommer ud i erhvervslivet.</p>
+          <p class="temabeskrivelse">I tema “02 - Grundlæggende web” fik jeg grundlæggende viden om anvendelse af diverse redskaber, som jeg, som kommende multimediedesigner, kan anvende, når jeg senere kommer ud i erhvervslivet.</p>
           <p>På dette tema har jeg blandt andet lært om grundlæggende principper inden for design og programmering, herunder Photoshop, Adobe XD, styletile, wireframes, layoutdiagram, princippet om mobile first, HTML, CSS, validering, responsivitet, indholdsproduktion samt forskellige stilarter inden for webdesign.</p>
           <p>Disse redskaber har ligeledes dannet grundlag for de resterende opgaver, jeg har lavet på dette semester samt dette portfolio.</p>
         </div>
@@ -42,8 +42,8 @@
       <section class="tema_2section_3col">
         <div>
           <h2>OPGAVEBESKRIVELSE</h2>
-          <p>I dette tema udarbejdede jeg mit første responsive website, som handlede om min store passion, tufting.</p>
-          <p>Derudover skulle websitet tage udgangspunkt i en tildelt stilart, som i mit tilfælde blev retro gaming design, som jeg forinden havde undersøgt og fremlagt om for resten af klassen. En stil der kendetegnes som værende farverig men med en begrænset farvepalette, retro samt pixeleret.</p>
+          <p>I dette tema udarbejdede jeg mit første responsive website, som omhandlede min store passion, tufting.</p>
+          <p>Derudover skulle websitet tage udgangspunkt i en tildelt stilart, som i mit tilfælde blev retro gaming design, og som jeg forinden havde undersøgt og fremlagt om for resten af klassen. En stil der kendetegnes som værende farverig men med en begrænset farvepalette, retro samt pixeleret.</p>
           <p>Du kan se mit færdige produkt til højre, hvorefter du kan læse mere om min proces nedenfor.</p>
         </div>
         <div class="calltoaction_center">
@@ -71,9 +71,9 @@
       <section class="proces_2col">
         <div>
           <h2>OPBYGNING AF WEBSITE</h2>
-          <p>Efter at have udarbejdet et moodboard og et styletile, fik jeg udleveret en wireframe over hjemmesidens grundlæggende layout, og som jeg, i samspil med ovenstående designprincipper, brugte til at kreere selve indholdet til mit website.</p>
+          <p>Efter at have udarbejdet et moodboard og et styletile fik jeg udleveret en wireframe over hjemmesidens grundlæggende layout, og som jeg, i samspil med ovenstående designprincipper, brugte til at kreere selve indholdet til mit website.</p>
           <p>Derudover fik jeg senere udleveret et layoutdiagram, som jeg fulgte, da jeg kodede i HTML-filen. Dette med henblik på at sikre struktur og semantisk opmærkning.</p>
-          <p>Dernæst blev jeg introduceret for CSS, som gør det muligt at style sine HTML-elementer. Det var ligeledes her jeg blev gjort bekendt med responsivitet samt mobile-first princippet, hvor man ved hjælp af grids og flexbox, i media queries, kan tilpasse indholdets placering på skærme, der har et højere antal pixels end på en mobiltelefon.</p>
+          <p>Dernæst blev jeg introduceret for CSS, som gør det muligt at style sine HTML-elementer. Det var ligeledes her, jeg blev gjort bekendt med responsivitet samt mobile-first princippet, hvor man ved hjælp af grids og flexbox, i media queries, kan tilpasse indholdets placering på skærme, der har et højere antal pixels end på en mobiltelefon.</p>
         </div>
         <div>
           <img src="tema_2/html_css.webp" alt="HTML og CSS" />
@@ -83,8 +83,8 @@
       <section class="proces_2col">
         <div>
           <h2>SPLASHBILLEDE</h2>
-          <p>Til vores hjemmeside skulle vi ligeledes designe vores eget splashbillede, hvor jeg i den forbindelse fik arbejdet med Adobe Photoshop.</p>
-          <p>I udarbejdelsen af mit spalshbillede styrkede jeg mine kompetencer inden for det at arbejde med flere lag, fjerne baggrunde og opnåede en generel forståelse for, hvordan programmet virker. Udover at styrke mine færdigheder i Photoshop, fik jeg, på dette tema, ligeledes viden om grundlæggende farveteori, typografi samt ikon-design, hvilket ligeledes blev implementeret på mit website.</p>
+          <p>Til vores hjemmeside skulle vi tilmed designe vores eget splashbillede, hvor jeg i den forbindelse fik arbejdet med Adobe Photoshop.</p>
+          <p>I udarbejdelsen af mit spalshbillede styrkede jeg mine færdigheder inden for det at arbejde med flere lag, fjerne baggrunde og opnåede en generel forståelse for, hvordan programmet virker. Udover at styrke mine færdigheder i Photoshop, fik jeg, på dette tema, ligeledes viden om grundlæggende farveteori, typografi samt ikon-design, hvilket ligeledes blev implementeret på mit website.</p>
           <p>Til sidst i temaet validerede jeg mine HTML- og CSS-filer og uploadede herefter til min webhost ved hjælp af ftp-clienten Filezilla.</p>
         </div>
         <div class="proces_byt_plads">
