--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <nav class="main-menu">
         <button class="toggle-btn">MENU</button>
         <ul>
-          <li class="toggle_projekter"><a href="projekter.html">PROJEKTER</a></li>
-          <li class="toggle_ommig"><a href="ommig.html">OM MIG</a></li>
+          <li><a href="projekter.html">PROJEKTER</a></li>
+          <li><a href="ommig.html">OM MIG</a></li>
         </ul>
       </nav>
     </header>
