grid til billeder

--- a/tema6.html
+++ b/tema6.html
@@ -58,8 +58,14 @@
           <p>Efter at have fastlagt stiludtrykket påbegyndte jeg designfasen. I denne fase benyttede jeg mig af sketching, crazy 8’s, wireframes samt en mock-up.</p>
           <p>Ud fra min mock-up forsøgte jeg at lave et layoutdiagram, som senere, i samspil med mock-uppen, gjorde, at jeg formåede at kode mit portfolio uden store bump på vejen.</p>
         </div>
-        <div>
-          <img src="tema_6/06_mockup.webp" alt="HTML og CSS" />
+        <div class="img_grid">
+          <div>
+            <img src="tema_6/06_mockup.webp" alt="HTML og CSS" />
+            <img src="tema_6/06_layoutdiagram2.webp" alt="Layoutdiagram" />
+          </div>
+          <div>
+            <img src="tema_6/06_layoutdiagram.webp" alt="Layoutdiagram" />
+          </div>
         </div>
       </section>
 
